--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "lumenode-container": "latest",
     "lumenode-environment-detector": "latest",
     "lumenode-filesystem": "latest",
-    "lumenode-foundation": "^1.1.1",
-    "lumenode-http": "^1.0.0",
-    "lumenode-logger": "^1.0.0",
+    "lumenode-foundation": "latest",
+    "lumenode-http": "latest",
+    "lumenode-logger": "latest",
     "moment": "^2.11.1",
-    "mongoose": "^4.3.5",
+    "mongoose": "^4.4.2",
     "node-pubsub": "^0.1.0",
     "path": "^0.12.7",
     "q": "^1.4.1"
